--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,15 @@ target/
 !**/src/main/**
 !**/src/test/**
 
+.DS_Store
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+/test/unit/coverage/
+/test/e2e/reports/
+selenium-debug.log
+
 ### STS ###
 .apt_generated
 .classpath
