--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,16 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# dependencies
+node_modules
+
+# logs
+npm-debug.log
+
+# Nuxt build
+.nuxt
+
+# Nuxt generate
+dist
+
